# cppimagefilterbase

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  additionals.h  config.txt  config_reader.cpp  config_reader.h  filter.cpp  filter.h  filter_manager.cpp  filter_manager.h  filter_types.cpp  filter_types.h  main.cpp  png_toolkit.cpp  png_toolkit.h
